# Statistical-Arbitrage-pipeline

./: LICENSE  README.md  pyproject.toml
notebooks/: 01_eda_pairs.ipynb
scripts/: run_live.py  run_pairs.py  run_walkforward_portfolio.py  scan_pairs.py
src/sarb/: config.py
src/sarb/backtest/: engine.py  walkforward.py
src/sarb/data/: ingest.py
src/sarb/features/: kalman.py  spread.py
src/sarb/live/: broker.py  paper_broker.py  runner.py  signal.py
src/sarb/metrics/: performance.py
src/sarb/portfolio/: vol_target.py
src/sarb/research/: ml_select.py  select_pairs.py  walkforward_portfolio.py
src/sarb/risk/: covariance.py  limits.py
src/sarb/split/: rebalance.py  time_split.py
src/sarb/stats/: bootstrap.py  cointegration.py  multiple_testing.py
src/sarb/strategy/: pairs.py
src/sarb/viz/: charts.py  report.py
src/stat_arb_research_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_backtest.py  test_data.py  test_features.py  test_kalman.py  test_live.py  test_metrics.py  test_ml_select.py  test_portfolio.py  test_research.py  test_risk.py  test_split.py  test_stats.py  test_strategy.py  test_viz.py
