[project]
name = "stat-arb-research-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "yfinance",
  "statsmodels",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
ml = ["scikit-learn>=1.0"]
dev = ["pytest>=7.0"]
all = ["matplotlib>=3.5", "scikit-learn>=1.0", "pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
